--- a/spi/mpu9250_spi/CMakeLists.txt
+++ b/spi/mpu9250_spi/CMakeLists.txt
@@ -2,6 +2,13 @@ add_executable(mpu9250_spi
         mpu9250_spi.c
         )
 
+# Pull in our pico_stdlib which aggregates commonly used features
+target_link_libraries(mpu9250_spi pico_stdlib)
+
+# enable usb output, disable uart output
+pico_enable_stdio_usb(mpu9250_spi 1)
+pico_enable_stdio_uart(mpu9250_spi 0)
+
 # Pull in our (to be renamed) simple get you started dependencies
 target_link_libraries(mpu9250_spi pico_stdlib hardware_spi)
 
